# bii

./: .gitignore  .readthedocs.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: Makefile  api.rst  conf.py  index.md  installation.md  quickstart.md  requirements.txt  theory.md
src/bii/: #priors.py#  __init__.py  core.py  data.py  diagnostics.py  experiments.py  fit.py  horseshoe.py  ii.py  inference.py  inference_power.py  mcmc.py  power_correction.py  priors.py  radial.py  sampling.py  sparse_dirichlet.py  triplet_design.py  triplets.py  utils.py  vi.py  voronoi.py
tests/: test_core.py  test_data.py  test_diagnostics.py  test_examples_curvature.py  test_examples_inference.py  test_fit.py  test_horseshoe_mcmc.py  test_inference.py  test_inference_metrics.py  test_integration.py  test_map.py  test_priors.py  test_radial.py  test_sampling.py  test_sparse_dirichlet.py  test_theory.py  test_vi.py  test_waic.py
tests/properties/: test_core_props.py  test_inference_props.py  test_radial_props.py
