[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "bayesian-information-imbalance"
version = "0.0.1"
description = "Experiments and utilities for Bayesian information imbalance"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Andrea Mascaretti", email = "amascare@sissa.it" }]
dependencies = [
    "jax>=0.4",
    "jaxlib>=0.4",
    "blackjax>=1.0",
    "optax>=0.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "hypothesis>=6",
  "pytest-cov>=5",
  "ruff>=0.6",          # linter+formatter
  "mypy>=1.11",
  "pre-commit>=4",
  "nbqa>=1.9",          # run ruff/mypy on notebooks
  "pytest-xdist>=3",    # parallel tests
  "nbmake>=1.5", # test notebooks (optional)
  "jupytext>=1.16",     # pair notebooks with .py for diffs
]

[tool.ruff]
line-length = 100
target-version = "py310"
lint.select = ["E","F","I","B","UP","N","S","SIM","PLE"]
lint.ignore = ["S101", "N803", "N806"] # allow asserts; uppercase X/Z/T convention
format.preview = true

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true
strict_optional = true
plugins = []

[tool.pytest.ini_options]
addopts = "-ra -q --cov=src --cov-report=term-missing"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/bii"]

